@@ -14,7 +14,6 @@ var Text = (function(){
       // but we want to replace half one only.
       var replaced = this.content
 	.replace(/ /g, "") // half space
-	.replace(/&nbsp;/g, "")
 	.replace(/\n/g, "")
 	.replace(/\t/g, "");
       return replaced === "";
